# time_tracker

./: .gitignore  README.md  TODO.md  helpers.py  hook_suppress_console.py  main.py  main.spec  manage.py  models.py  pyproject.toml  requirements_linux.txt  runtime_suppress_console.py  setup.py  state.py  ty.toml
apps/app_settings/: models.py  utils.py
apps/events/: consts.py  models.py  subscribers.py
apps/notifications/: subscribers.py
apps/settings/: models.py
apps/tasks/: helpers.py  models.py
apps/time_tracker/: consts.py  helpers.py  models.py  types.py  utils.py
apps/to_do/: helpers.py  models.py
controls/: activity_tab_controls.py  activity_track_controls.py  base_control.py  new_activity_modal_controls.py  todo_tab_controls.py
core/: audio_player.py  consts.py  database.py  di.py  flet_helpers.py  models.py  scripts.py  settings.py  state.py  store.py  tasks.py  utils.py
core/controls/: base_control.py
core/mixins/: __init__.py  session_stored_component.py  tracker_info_mixin.py
core/system_events/: event_bus.py  types.py
core/utils/: date_utils.py
migrations/: migration_applier.py  models.py
migrations/revisions/: 0_init.py  1_create_tables.py  2_rename_event_initiator.py  3_extend_app_settings.py  4_pomodoro_sound_settings.py  5_add_settings_audio_param_table.py  6_remove_old_settings_audio_params.py  7_add_ui_settings.py
scripts/: github_release_parser.py  project_metadata_extractor.py
tests/: test_github_releases_parser.py
ui/: consts.py  ui_settings.py  utils.py
ui/components/: app_bar.py  timer.py
ui/popup/: error.py
(+108 files in other folders)
