[project]
name = "time-tracker"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "audioop-lts>=0.2.2",
    "dependency-injector>=4.48.3",
    "flet[all]==0.82.2",
    "markdown>=3.10",
    "peewee>=3.18.3",
    "playsound3>=3.3.1",
    "psutil>=7.2.0",
    "pydub>=0.25.1",
    "pyinstaller>=6.18.0",
    "pytz>=2025.2",
    "pywinctl>=0.4.1",
    "ty==0.0.23",
]

[dependency-groups]
dev = [
    "ty>=0.0.12",
]
